# blog_api

./: .gitignore  auth.py  config.py  database.db  database.py  image_utils.py  main.py  models.py  pyproject.toml  schemas.py  store.txt  test_posts.py  testing.js  testing.py
Router/: html_router.py  posts.py  users.py
alembic/: env.py
alembic/versions/: c5be60bec801_first_schema.py
routers/: html_router.py  posts.py  users.py
services/: email_utils.py  image_utils.py  s3_service.py
static/css/: account_page.css  account_page_ai.css  all_post_page_ai.css  error_page.css  forgot_password_page.css  general_style.css  general_styling.css  header_style_ai.css  header_styling.css  login_and_register_page.css  login_register_ai.css  main_post_page.css  post_edit_ai.css  reset_password_page.css  sections_css.css  single_post_page.css  upload_post_editing.css
static/script/: account_page.js  auth.js  layout.js  login.js  main.js  register.js  reset_password.js  single_post.js  utils.js
templates/: account_page.html  all_posts_page.html  email_reset.html  error_page.html  forgot_password_page.html  layout_all_page.html  layout_page.html  login_page.html  main_post_page.html  register_page.html  reset_password_page.html  single_post_page.html  ss.html  user_all_posts.html  user_post_page.html
test/: conftest.py  test_auth.py  test_users.py
